fixed the patient register and otp email and sms

--- a/backend/.env
+++ b/backend/.env
@@ -10,3 +10,5 @@ MONGO_URI=mongodb://127.0.0.1:27017/smartdentalclinic
 IPROGTECH_API_KEY=38b2985c08ceee5ad7efce09ca06765ee9d88091
 AUTH_ENABLED=true
 FRONTEND_URL=http://localhost:5174
+EMAIL_USER=smartdentalclinic24@gmail.com
+EMAIL_PASS=kqlvyyafawrsepps
