--- a/backend/package.json
+++ b/backend/package.json
@@ -27,6 +27,7 @@
     "mongoose": "^8.19.2",
     "multer": "^2.0.2",
     "node-fetch": "^3.3.2",
+    "nodemailer": "^7.0.10",
     "nodemon": "^3.1.10",
     "recharts": "^3.2.1",
     "validator": "^13.15.15"
